# rdfsnips

./: .travis.yml  configure.ac
src/: Makefile.am  fnv.c  fnv.h  hashf.c  hashf.yuck  hashl.c  hashl.yuck  metarap.c  metarap.yuck  nifty.h  nquads-fold.c  nquads-fold.yuck  ttl-prefixify.c  ttl-prefixify.yuck  ttl-split.c  ttl-split.yuck  ttl-wc.c  ttl-wc.yuck  unqpc.c  unqpc.yuck  xxhash.h
test/: Makefile.am  gnd-extr.ttl  simple.ttl  split-01.clit  split-02.clit  wc-01.clit  wc-02.clit
